--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/7432addfe6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Merriweather&family=Source+Serif+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico.png" type="image/x-icon">
@@ -13,20 +14,22 @@
 
 <body>
     <header class="header">
-        <nav class="menu">
+        <nav class="menu" id="menu">
             <a href="#about" class="menu__item">Обо мне</a>
             <a href="#announcement" class="menu__item">Анонс</a>
             <a href="#way" class="menu__item">Путь в йоге</a>
             <a href="#art" class="menu__item">Статьи</a>
             <a href="#reviews" class="menu__item">Отзывы</a>
             <a href="#contacts" class="menu__item">Контакты</a>
-            <a href="https://vk.com/realyogacher" id="icons" class="menu__item">
+            <a href="https://vk.com/realyogacher" id="icons" class="menu__item menu__icon">
                 <i class="fa-brands fa-vk"></i>
             </a>
-            <a href="https://t.me/realyogachel" id="icons" class="menu__item">
+            <a href="https://t.me/realyogachel" id="icons" class="menu__item menu__icon">
                 <i class="fa-solid fa-paper-plane"></i>
             </a>
             <a href="tel:+79193253046" class="menu__item">+79193253046</a>
+            <a href="#" class="menu-burger">
+                <i class="fa fa-bars"></i>
         </nav>
     </header>
 
@@ -68,7 +71,6 @@
                     <div class="about-yoga__picture">
                         <img src="img/Анастасия Черника.jpg" alt="Анастасия Черника">
                     </div>
-
                 </div>
             </div>
 
@@ -143,8 +145,8 @@
                 <h2 class="heading">Чем живу сейчас</h2>
                 <p class="info-section4__text">Обитаю в Крыму в окрестностях Судака. Хорошо знаю местность, поэтому сама вожу по заповедным тропам Крыма, большей части которых нет в путеводителях. Провожу индивидуальные и групповые занятия, онлайн занятия и консультации в Telegram.</p>
                 <p class="info-section4__text">Здесь в Крыму создались условия для проявления ещё одного моего увлечения с детства – <a href="https://vk.com/clavntea">травничества</a>.</p>
-                <p class="info-section4__text">С 2015 года регулярно провожу выездные многодневные семинары/путешествия по красивейшим местам: Крым, Урал, Кавказ, Абхазия, Байкал и Алтай. Меня вдохновляет этот опыт. Живая природа и наша практика совместно, даже в течение недели, творят
-                    простые чудеса – расправляются плечи, искренние настоящие улыбки и глаза начинают светиться естественной радостью.</p>
+                <p class="info-section4__text">С 2015 года регулярно провожу выездные многодневные семинары/путешествия по красивейшим местам: Крым, Дагестан, Урал, Кавказ, Абхазия, Байкал и Алтай. Меня вдохновляет этот опыт. Живая природа и наша практика совместно, даже в течение
+                    недели, творят простые чудеса – расправляются плечи, искренние настоящие улыбки и глаза начинают светиться естественной радостью.</p>
                 <p>Возможен вариант организации индивидуального тура. Проживание в Судаке или его окрестностях (отдых в деревне), занятия йогой и экскурсии по славным местам Крыма.</p>
             </div>
         </section>
@@ -255,7 +257,7 @@
 
     <footer class="footer background-lightgrey">
         <a href="https://realyoga.ru" class="footer__text">Школа йоги Виктора Бойко</a>
-        <div class="social-links">
+        <div class="social-links" id="contacts">
             <a href="https://vk.com/nastenkacher" class="social-links__item">
                 <i class="fa-brands fa-vk"></i>
             </a>
@@ -280,7 +282,7 @@
     <a href="#to-scroll" class="scroll-up">
         <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
-
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
