--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <body>
     <header class="header">
         <nav class="menu" id="menu">
+            <a href="#" class="menu__logo menu__item">
+                <img src="img/icon.png" alt="logo" class="menu__logo-img">
+            </a>
             <a href="#about" class="menu__item">Обо мне</a>
             <a href="#announcement" class="menu__item">Анонс</a>
             <a href="#way" class="menu__item">Путь в йоге</a>
@@ -28,8 +31,10 @@
                 <i class="fa-solid fa-paper-plane"></i>
             </a>
             <a href="tel:+79193253046" class="menu__item">+79193253046</a>
-            <a href="#" class="menu-burger">
+            <a href="#" class="menu__burger-icon menu-burger">
                 <i class="fa fa-bars"></i>
+            </a>
+            <div class="popup" id="popup"></div>
         </nav>
     </header>
 
