--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/7432addfe6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="assets/ui-components-master/slider/itc-slider.css">
-    <script src="assets/ui-components-master/slider/itc-slider.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&family=Merriweather&family=Source+Serif+Pro:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico.png" type="image/x-icon">
     <title>Йога / Анастасия Черника</title>
@@ -27,7 +26,7 @@
                 <a href="#announcement" class="menu__item">Анонс</a>
                 <a href="#way" class="menu__item">Путь в йоге</a>
                 <a href="#art" class="menu__item">Статьи</a>
-                <a href="#reviews" class="menu__item">Отзывы</a>
+                <a href="#commentation" class="menu__item">Отзывы</a>
                 <a href="#contacts" class="menu__item">Контакты</a>
                 <a href="https://vk.com/realyogacher" id="icons" class="menu__item menu__icon">
                     <i class="fa-brands fa-vk"></i>
@@ -209,29 +208,29 @@
             </div>
         </section>
 
-        <section class="commentation background-lightgrey">
+        <section class="reviews background-lightgrey">
             <div class="wrapper">
                 <h2 class="heading">Послевкусие от семинаров</h2>
-                <p class="commentation__desc">Из серии "не могла не написать"</p>
+                <p class="reviews__desc">Из серии "не могла не написать"</p>
                 <div class="box">
-                    <article class="comment-info">
+                    <article class="reviews-info">
                         <a href="https://vk.com/@realyogacher-kak-my-na-zolotoi-ural-hodili">
                             <img src="img/Для отзыва 1.jpeg" alt="Золотой Урал">
-                            <h3 class="comment-info__title">Как мы на "золотой" Урал ходили.<br> Таганай, сентябрь 2019 года</h3>
+                            <h3 class="reviews-info__title">Как мы на "золотой" Урал ходили.<br> Таганай, сентябрь 2019 года</h3>
 
                         </a>
                     </article>
-                    <article class="comment-info">
+                    <article class="reviews-info">
                         <a href="https://vk.com/@realyogacher-vnutrennee-puteshestvie-v-goru">
                             <img src="img/Для отзыва 2.jpeg" alt="Кавказ">
-                            <h3 class="comment-info__title">Внутреннее путешествие в гору.<br> Кавказ, сентябрь 2019 года</h3>
+                            <h3 class="reviews-info__title">Внутреннее путешествие в гору.<br> Кавказ, сентябрь 2019 года</h3>
 
                         </a>
                     </article>
-                    <article class="comment-info">
+                    <article class="reviews-info">
                         <a href="https://vk.com/@realyogacher-vkus-chaya-na-vershine">
                             <img src="img/Для отзыва 3.jpg" alt="Зимний Крым">
-                            <h3 class="comment-info__title">Вкус чая на вершине.<br> Крым, январь 2020 года</h3>
+                            <h3 class="reviews-info__title">Вкус чая на вершине.<br> Крым, январь 2020 года</h3>
 
                         </a>
                     </article>
@@ -243,45 +242,51 @@
             </div>
         </section>
 
-        <section id="reviews" class="notice background-grey">
+        <section id="commentation" class="comments background-grey">
             <div class="wrapper">
                 <h2 class="heading">Отзывы</h2>
-                <div class="reviews-box">
-                    <article class="notice-item">
-                        <h4 class="notice-item__title">Наталья Т. (Сергиев Пасад)</h4>
-                        <p class="notice-item__text">Йога и травы, 2022г.</p>
-                        <p class="notice-item__desc">Спасибо, Настя, за всё что ты делаешь для нас! За знания и опыт, которыми ты делишься 🙏 за щедрость и отзывчивость 🙏 за возможность проживать самые гармоничные минуты своей жизни в окружении природы и таких же замечательных людей
-                            как ты!!</p>
-                    </article>
-                    <article class="notice-item">
-                        <h4 class="notice-item__title">Лиза Е. (Москва)</h4>
-                        <p class="notice-item__text">Йога в ZOOM, 2020г.</p>
-                        <p class="notice-item__desc">Настя, искренне благодарю тебя за то, что ты являешься Проводником тишины, в которой становится слышен тихий голос глубинной природы Жизни Тот голос, который ведёт к силе и радости Жизни За то, что вдохновляешь своим Бытием и прикосновением
-                            к чему-то настоящему и родному.</p>
-                    </article>
-                    <article class="notice-item">
-                        <h4 class="notice-item__title">Светлана Ф. (Тюмень)</h4>
-                        <p class="notice-item__text">Семинар г. Тюмень и йога онлайн, 2020г.</p>
-                        <p class="notice-item__desc">Йога офлайн и ОНЛАЙН. Иногда просыпаюсь утром как расстроенная гитара, струнки натянуты, а кое-где порвались, не идти же в таком виде в люди, на работу. Иду до коврика, и через час-полтора, гитара красиво звучит, звуки стройные
-                            и правильные, обычно сама настраиваю себя, но если корпус треснул - несу к мастеру в ремонт. Отладка происходит всякий раз, мастер знает как помочь наладить инструмент :) и свой и мой, и соседа. Под голос Анастасии происходит
-                            добровольно-принудительное погружение в тишину. Проще переключаешься от забот быта и треска собственных мыслей. Голос поддерживает нить восприятия, не позволяет слишком глубоко раствориться и всякий раз возвращает внимание
-                            в тело, в текущий момент, в то что происходит со мной сейчас.</p>
-                    </article>
-                    <article class="notice-item">
-                        <h4 class="notice-item__title">Юлия М. (Туапсе)</h4>
-                        <p class="notice-item__text">Новогодние каникулы в Крыму, 2022г.</p>
-                        <p class="notice-item__desc">Закончился Рождественский семинар по йоге! Спешу поделиться благодарностью с организатором и вдохновителем Анастасией. Благодаря ей мы научились не только качественно расслабляться, но и покорять Крымские горы. Огромная благодарность
-                            Марии мастеру по акварели, вместе с ней легко получаются шедевры;) И неописуемые впечатления от мастер-класса по керамике. Уже второй раз попадаю к Асе и каждый раз получаются космические изделия. Отдельная благодарность хозяину
-                            дома Александру - за гостеприимство, тепло и уют. Благодаря ему наша команда познакомилась с многими крымскими деликатесами.</p>
-                    </article>
-                    <article class="notice-item">
-                        <h4 class="notice-item__title">Лиза О. (Н. Новгород)</h4>
-                        <p class="notice-item__text">Крым, Фиолент, 2016г.</p>
-                        <p class="notice-item__desc">Хочу поблагодарить Анастасию за эти замечательные йога-каникулы! Мне очень понравилась та атмосфера спокойствия, которая была на семинаре, и то что можно было в любой момент лечь в Шавасану и делать упражнение столько, сколько
-                            считаешь нужным, по своему состоянию:) Спасибо за индивидуальный подход! Настя всегда показывала альтернативный вариант выполнения асаны - полегче. Этот подход к йоге сильно отличается от того, чем я занималась раньше, здесь
-                            я поняла что такое йога, и начала заниматься, прислушиваясь к себе! Поэтому я рада, что поехала именно на эти йога-каникулы и познакомилась со школой классической йоги! Это был отдых с пользой для здоровья души и тела, который
-                            хочется повторить!</p>
-                    </article>
+                <div class="slider swiper-container">
+                    <div class="swiper-wrapper">
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Наталья Т. (Сергиев Пасад)</h4>
+                            <p class="slider__text">Йога и травы, 2022г.</p>
+                            <p class="slider__desc">Спасибо, Настя, за всё что ты делаешь для нас! За знания и опыт, которыми ты делишься 🙏 за щедрость и отзывчивость 🙏 за возможность проживать самые гармоничные минуты своей жизни в окружении природы и таких же замечательных
+                                людей как ты!!</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Лиза Е. (Москва)</h4>
+                            <p class="slider__text">Йога в ZOOM, 2020г.</p>
+                            <p class="slider__desc">Настя, искренне благодарю тебя за то, что ты являешься Проводником тишины, в которой становится слышен тихий голос глубинной природы Жизни Тот голос, который ведёт к силе и радости Жизни За то, что вдохновляешь своим Бытием
+                                и прикосновением к чему-то настоящему и родному.</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Светлана Ф. (Тюмень)</h4>
+                            <p class="slider__text">Семинар г. Тюмень и йога онлайн, 2020г.</p>
+                            <p class="slider__desc">Йога офлайн и ОНЛАЙН. Иногда просыпаюсь утром как расстроенная гитара, струнки натянуты, а кое-где порвались, не идти же в таком виде в люди, на работу. Иду до коврика, и через час-полтора, гитара красиво звучит, звуки стройные
+                                и правильные, обычно сама настраиваю себя, но если корпус треснул - несу к мастеру в ремонт. Отладка происходит всякий раз, мастер знает как помочь наладить инструмент :) и свой и мой, и соседа. Под голос Анастасии происходит
+                                добровольно-принудительное погружение в тишину. Проще переключаешься от забот быта и треска собственных мыслей. Голос поддерживает нить восприятия, не позволяет слишком глубоко раствориться и всякий раз возвращает внимание
+                                в тело, в текущий момент, в то что происходит со мной сейчас.</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Юлия М. (Туапсе)</h4>
+                            <p class="slider__text">Новогодние каникулы в Крыму, 2022г.</p>
+                            <p class="slider__desc">Закончился Рождественский семинар по йоге! Спешу поделиться благодарностью с организатором и вдохновителем Анастасией. Благодаря ей мы научились не только качественно расслабляться, но и покорять Крымские горы. Огромная благодарность
+                                Марии мастеру по акварели, вместе с ней легко получаются шедевры;) И неописуемые впечатления от мастер-класса по керамике. Уже второй раз попадаю к Асе и каждый раз получаются космические изделия. Отдельная благодарность
+                                хозяину дома Александру - за гостеприимство, тепло и уют. Благодаря ему наша команда познакомилась с многими крымскими деликатесами.</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Лиза О. (Н. Новгород)</h4>
+                            <p class="slider__text">Крым, Фиолент, 2016г.</p>
+                            <p class="slider__desc">Хочу поблагодарить Анастасию за эти замечательные йога-каникулы! Мне очень понравилась та атмосфера спокойствия, которая была на семинаре, и то что можно было в любой момент лечь в Шавасану и делать упражнение столько, сколько
+                                считаешь нужным, по своему состоянию:) Спасибо за индивидуальный подход! Настя всегда показывала альтернативный вариант выполнения асаны - полегче. Этот подход к йоге сильно отличается от того, чем я занималась раньше,
+                                здесь я поняла что такое йога, и начала заниматься, прислушиваясь к себе! Поэтому я рада, что поехала именно на эти йога-каникулы и познакомилась со школой классической йоги! Это был отдых с пользой для здоровья души и
+                                тела, который хочется повторить!</p>
+                        </article>
+
+                    </div>
+                    <div class="slider__pagination swiper-pagination"></div>
+                    <div class="slider__button swiper-button-prev"></div>
+                    <div class="slider__button swiper-button-next"></div>
                 </div>
             </div>
         </section>
@@ -314,8 +319,12 @@
     <a href="#to-scroll" class="scroll-up">
         <i class="fa-solid fa-circle-chevron-up"></i>
     </a>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="scripts/burger-menu.js"></script>
     <script src="scripts/likes.js"></script>
+    <script src="scripts/slider.js"></script>
+
 </body>
 
 </html>
