--- a/index.html
+++ b/index.html
@@ -166,44 +166,49 @@
         <section id="art" class="articles background-grey">
             <div class="wrapper">
                 <h2 class="heading">Статьи</h2>
-                <div class="container">
-                    <article class="article-info">
-                        <a href="http://nebeshavasana.ru/yogareset">
-                            <img src="img/Для статьи 1.jpg" alt="Чайки над Байкалом">
-                        </a>
-                        <div class="heart-counter">
-                            <button class="heart" type="button"></button>
-                            <span class="likes-number">0</span>
-                        </div>
-                        <a href="http://nebeshavasana.ru/ne_dremlet">
-                            <p class="article-info__desc">Все мы родом из детства</p>
-                        </a>
-                    </article>
-                    <article class="article-info">
-                        <a href="http://nebeshavasana.ru/ne_dremlet">
-                            <img src="img/Для статьи 2.jpg" alt="">
-                        </a>
-                        <div class="heart-counter">
-                            <button class="heart" type="button"></button>
-                            <span class="likes-number">0</span>
-                        </div>
-                        <a href="http://nebeshavasana.ru/ne_dremlet">
-                            <p class="article-info__desc">Для тех, кто не дремлет...</p>
-                        </a>
-                    </article>
-                    <article class="article-info">
-                        <a href="http://nebeshavasana.ru/vnimanie">
-                            <img src="img/Для статьи 3.jpg" alt="">
+                <div class="slider-article swiper-container">
+                    <div class="swiper-wrapper">
+                        <article class="article-info swiper-slide">
+                            <a href="http://nebeshavasana.ru/yogareset">
+                                <img src="img/Для статьи 1.jpg" alt="Чайки над Байкалом">
+                            </a>
+                            <div class="heart-counter">
+                                <button class="heart" type="button"></button>
+                                <span class="likes-number">0</span>
+                            </div>
+                            <a href="http://nebeshavasana.ru/ne_dremlet">
+                                <p class="article-info__desc">Все мы родом из детства</p>
+                            </a>
+                        </article>
+                        <article class="article-info swiper-slide">
+                            <a href="http://nebeshavasana.ru/ne_dremlet">
+                                <img src="img/Для статьи 2.jpg" alt="">
+                            </a>
+                            <div class="heart-counter">
+                                <button class="heart" type="button"></button>
+                                <span class="likes-number">0</span>
+                            </div>
+                            <a href="http://nebeshavasana.ru/ne_dremlet">
+                                <p class="article-info__desc">Для тех, кто не дремлет...</p>
+                            </a>
+                        </article>
+                        <article class="article-info swiper-slide">
+                            <a href="http://nebeshavasana.ru/vnimanie">
+                                <img src="img/Для статьи 3.jpg" alt="">
 
-                        </a>
-                        <div class="heart-counter">
-                            <button class="heart" type="button"></button>
-                            <span class="likes-number">0</span>
-                        </div>
-                        <a href="http://nebeshavasana.ru/ne_dremlet">
-                            <p class="article-info__desc">Работа с вниманием в практике йоги</p>
-                        </a>
-                    </article>
+                            </a>
+                            <div class="heart-counter">
+                                <button class="heart" type="button"></button>
+                                <span class="likes-number">0</span>
+                            </div>
+                            <a href="http://nebeshavasana.ru/ne_dremlet">
+                                <p class="article-info__desc">Работа с вниманием в практике йоги</p>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="slider__pagination swiper-pagination"></div>
+                    <div class="slider__button swiper-button-prev"></div>
+                    <div class="slider__button swiper-button-next"></div>
                 </div>
             </div>
         </section>
@@ -212,28 +217,33 @@
             <div class="wrapper">
                 <h2 class="heading">Послевкусие от семинаров</h2>
                 <p class="reviews__desc">Из серии "не могла не написать"</p>
-                <div class="box">
-                    <article class="reviews-info">
-                        <a href="https://vk.com/@realyogacher-kak-my-na-zolotoi-ural-hodili">
-                            <img src="img/Для отзыва 1.jpeg" alt="Золотой Урал">
-                            <h3 class="reviews-info__title">Как мы на "золотой" Урал ходили.<br> Таганай, сентябрь 2019 года</h3>
+                <div class="slider-reviews swiper-container">
+                    <div class="swiper-wrapper">
+                        <article class="reviews-info swiper-slide">
+                            <a href="https://vk.com/@realyogacher-kak-my-na-zolotoi-ural-hodili">
+                                <img src="img/Для отзыва 1.jpeg" alt="Золотой Урал">
+                                <h3 class="reviews-info__title">Как мы на "золотой" Урал ходили.<br> Таганай, сентябрь 2019 года</h3>
 
-                        </a>
-                    </article>
-                    <article class="reviews-info">
-                        <a href="https://vk.com/@realyogacher-vnutrennee-puteshestvie-v-goru">
-                            <img src="img/Для отзыва 2.jpeg" alt="Кавказ">
-                            <h3 class="reviews-info__title">Внутреннее путешествие в гору.<br> Кавказ, сентябрь 2019 года</h3>
+                            </a>
+                        </article>
+                        <article class="reviews-info swiper-slide">
+                            <a href="https://vk.com/@realyogacher-vnutrennee-puteshestvie-v-goru">
+                                <img src="img/Для отзыва 2.jpeg" alt="Кавказ">
+                                <h3 class="reviews-info__title">Внутреннее путешествие в гору.<br> Кавказ, сентябрь 2019 года</h3>
 
-                        </a>
-                    </article>
-                    <article class="reviews-info">
-                        <a href="https://vk.com/@realyogacher-vkus-chaya-na-vershine">
-                            <img src="img/Для отзыва 3.jpg" alt="Зимний Крым">
-                            <h3 class="reviews-info__title">Вкус чая на вершине.<br> Крым, январь 2020 года</h3>
+                            </a>
+                        </article>
+                        <article class="reviews-info swiper-slide">
+                            <a href="https://vk.com/@realyogacher-vkus-chaya-na-vershine">
+                                <img src="img/Для отзыва 3.jpg" alt="Зимний Крым">
+                                <h3 class="reviews-info__title">Вкус чая на вершине.<br> Крым, январь 2020 года</h3>
 
-                        </a>
-                    </article>
+                            </a>
+                        </article>
+                    </div>
+                    <div class="slider__pagination swiper-pagination"></div>
+                    <div class="slider__button swiper-button-prev"></div>
+                    <div class="slider__button swiper-button-next"></div>
                 </div>
                 <blockquote class="quote">
                     <p><i>Грамотная практика йоги – тонкая настройка на свою мелодию. Когда ты живёшь в такт своей душе – Вселенная подпевает!</i></p>
@@ -248,16 +258,11 @@
                 <div class="slider swiper-container">
                     <div class="swiper-wrapper">
                         <article class="slider__wrapper swiper-slide">
-                            <h4 class="slider__title">Наталья Т. (Сергиев Пасад)</h4>
-                            <p class="slider__text">Йога и травы, 2022г.</p>
-                            <p class="slider__desc">Спасибо, Настя, за всё что ты делаешь для нас! За знания и опыт, которыми ты делишься 🙏 за щедрость и отзывчивость 🙏 за возможность проживать самые гармоничные минуты своей жизни в окружении природы и таких же замечательных
-                                людей как ты!!</p>
-                        </article>
-                        <article class="slider__wrapper swiper-slide">
-                            <h4 class="slider__title">Лиза Е. (Москва)</h4>
-                            <p class="slider__text">Йога в ZOOM, 2020г.</p>
-                            <p class="slider__desc">Настя, искренне благодарю тебя за то, что ты являешься Проводником тишины, в которой становится слышен тихий голос глубинной природы Жизни Тот голос, который ведёт к силе и радости Жизни За то, что вдохновляешь своим Бытием
-                                и прикосновением к чему-то настоящему и родному.</p>
+                            <h4 class="slider__title">Юлия М. (Туапсе)</h4>
+                            <p class="slider__text">Новогодние каникулы в Крыму, 2022г.</p>
+                            <p class="slider__desc">Закончился Рождественский семинар по йоге! Спешу поделиться благодарностью с организатором и вдохновителем Анастасией. Благодаря ей мы научились не только качественно расслабляться, но и покорять Крымские горы. Огромная благодарность
+                                Марии мастеру по акварели, вместе с ней легко получаются шедевры;) И неописуемые впечатления от мастер-класса по керамике. Уже второй раз попадаю к Асе и каждый раз получаются космические изделия. Отдельная благодарность
+                                хозяину дома Александру - за гостеприимство, тепло и уют. Благодаря ему наша команда познакомилась с многими крымскими деликатесами.</p>
                         </article>
                         <article class="slider__wrapper swiper-slide">
                             <h4 class="slider__title">Светлана Ф. (Тюмень)</h4>
@@ -268,11 +273,24 @@
                                 в тело, в текущий момент, в то что происходит со мной сейчас.</p>
                         </article>
                         <article class="slider__wrapper swiper-slide">
-                            <h4 class="slider__title">Юлия М. (Туапсе)</h4>
-                            <p class="slider__text">Новогодние каникулы в Крыму, 2022г.</p>
-                            <p class="slider__desc">Закончился Рождественский семинар по йоге! Спешу поделиться благодарностью с организатором и вдохновителем Анастасией. Благодаря ей мы научились не только качественно расслабляться, но и покорять Крымские горы. Огромная благодарность
-                                Марии мастеру по акварели, вместе с ней легко получаются шедевры;) И неописуемые впечатления от мастер-класса по керамике. Уже второй раз попадаю к Асе и каждый раз получаются космические изделия. Отдельная благодарность
-                                хозяину дома Александру - за гостеприимство, тепло и уют. Благодаря ему наша команда познакомилась с многими крымскими деликатесами.</p>
+                            <h4 class="slider__title">Наталья Т. (Сергиев Пасад)</h4>
+                            <p class="slider__text">Йога и травы, 2022г.</p>
+                            <p class="slider__desc">Спасибо, Настя, за всё что ты делаешь для нас! За знания и опыт, которыми ты делишься 🙏 за щедрость и отзывчивость 🙏 за возможность проживать самые гармоничные минуты своей жизни в окружении природы и таких же замечательных
+                                людей как ты!!</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Вячеслав В.</h4>
+                            <p class="slider__text">Семинар г. Тюмень, 2019г..</p>
+                            <p class="slider__desc">После разговора на семинара не отпускает момент недосказанности о том, что у каждого преподавателя школы В.С. Бойко своя особенная сила, а именно у Вас Анастасия. Это не секрет, что все, кто побывал на Ваших семинарах отмечают
+                                мягкость практики, но для каждого человека она своя особенная. Для меня, Ваша практика созвучна с нахождением в колыбели, у которой на страже моего покоя стоит любящая и всезнающая Мать-природа, мягко раскачивая и задавая
+                                ритм, напоминающий о моем аутентичном внутреннем состоянии, которое я забыл. И видимо, полученный опыт при разрешении собственных проблем в психо-эмоциональной сфере, и наделили Вашу силу интересной особенностью – мягким
+                                и нежным прикосновением, воздействие, которого не мобилизует заградительные барьеры психики (особенно у новичков), а усыпляет её. Тем самым, давая возможность проникнуть покою и наполнить пустой сосуд до краев.</p>
+                        </article>
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Лиза Е. (Москва)</h4>
+                            <p class="slider__text">Йога в ZOOM, 2020г.</p>
+                            <p class="slider__desc">Настя, искренне благодарю тебя за то, что ты являешься Проводником тишины, в которой становится слышен тихий голос глубинной природы Жизни Тот голос, который ведёт к силе и радости Жизни За то, что вдохновляешь своим Бытием
+                                и прикосновением к чему-то настоящему и родному.</p>
                         </article>
                         <article class="slider__wrapper swiper-slide">
                             <h4 class="slider__title">Лиза О. (Н. Новгород)</h4>
@@ -282,7 +300,13 @@
                                 здесь я поняла что такое йога, и начала заниматься, прислушиваясь к себе! Поэтому я рада, что поехала именно на эти йога-каникулы и познакомилась со школой классической йоги! Это был отдых с пользой для здоровья души и
                                 тела, который хочется повторить!</p>
                         </article>
-
+                        <article class="slider__wrapper swiper-slide">
+                            <h4 class="slider__title">Галина (Чапаевск)</h4>
+                            <p class="slider__text">Индивидуальный тур, г. Судак, 2019г.</p>
+                            <p class="slider__desc">Огромная благодарность за индивидуальные занятия йогой. Хочу написать тем, у кого не получается попасть на семинары. Мой отпуск не совпадал с семинарами и я договорилась с Настей об индивидуальных занятиях с ней в Судаке. Поездка
+                                получилась очень продуктивной и интересной. Ездила во второй половине января. Настя нашла для меня удобный отель. Первую половину дня занимались, а во вторую, Настя поводила меня по горам. Погода 10 тепла. Это было восхитительно!!!!
+                                Индивидуальные занятия понравились тем, что мы концентрировались именно на моих проблемах, подбирали асаны, о многом поговорили. Благодарна Насте за бесценный опыт!!!</p>
+                        </article>
                     </div>
                     <div class="slider__pagination swiper-pagination"></div>
                     <div class="slider__button swiper-button-prev"></div>
