--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                             <a href="http://nebeshavasana.ru/yogareset">
                                 <img src="img/Для статьи 1.jpg" alt="Чайки над Байкалом">
                             </a>
-                            <div class="heart-counter">
+                            <!-- <div class="heart-counter">
                                 <button class="heart" type="button"></button>
                                 <span class="likes-number">0</span>
-                            </div>
+                            </div> -->
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Все мы родом из детства</p>
                             </a>
@@ -184,10 +184,10 @@
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <img src="img/Для статьи 2.jpg" alt="">
                             </a>
-                            <div class="heart-counter">
+                            <!-- <div class="heart-counter">
                                 <button class="heart" type="button"></button>
                                 <span class="likes-number">0</span>
-                            </div>
+                            </div> -->
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Для тех, кто не дремлет...</p>
                             </a>
@@ -197,10 +197,10 @@
                                 <img src="img/Для статьи 3.jpg" alt="">
 
                             </a>
-                            <div class="heart-counter">
+                            <!-- <div class="heart-counter">
                                 <button class="heart" type="button"></button>
                                 <span class="likes-number">0</span>
-                            </div>
+                            </div> -->
                             <a href="http://nebeshavasana.ru/ne_dremlet">
                                 <p class="article-info__desc">Работа с вниманием в практике йоги</p>
                             </a>
