--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <section class="banner" id="to-scroll">
             <h1 class="banner__title">Анастасия Черника</h1>
             <div class="button-box">
-                <a href="#announcement" class="button">Ближайшие путешествия</a>
-                <a href="#art" class="button">Мои статьи</a>
+                <a href="#announcement" class="button btn1">Ближайшие путешествия</a>
+                <a href="#art" class="button btn2">Мои статьи</a>
             </div>
         </section>
 
@@ -346,6 +346,7 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="scripts/visible.js"></script>
     <script src="scripts/burger-menu.js"></script>
     <script src="scripts/likes.js"></script>
     <script src="scripts/slider.js"></script>
